Exported to html for distribution.

--- a/PIPER SSA Test Plan.ipynb
+++ b/PIPER SSA Test Plan.ipynb
@@ -1,7 +1,7 @@
 {
  "metadata": {
   "name": "",
-  "signature": "sha256:2e73f4546af1d5acd5452f0067b363ce580e7496b5ba2a947ba1c57aade5a3d9"
+  "signature": "sha256:c29db2cfb16713c6aff00b8e172afee7b767da8e4a73e2dfcdf17eac82ef6a75"
  },
  "nbformat": 3,
  "nbformat_minor": 0,
@@ -288,7 +288,7 @@
       "* Extracting and warming probe: 30 minutes (with heat gun, longer without)\n",
       "* TOTAL: ~1 hr \n",
       "\n",
-      "PIPER requires 32 modules to be tested for a total of ~30 hours of work, the majority of which may be performed by interns. \n",
+      "PIPER requires 32 modules to be tested for a total of ~30 hours of work.\n",
       "\n",
       "2 dip probes are available, but only 1 PSquid card is available. By alternating the dip probes, the amount of attended work could be cut down to about 20 hours, since the warming of the probes may be left unattended.\n",
       "\n",
