Trying to reduce file sizes...

--- a/PIPER SSA Test Plan.ipynb
+++ b/PIPER SSA Test Plan.ipynb
@@ -1,7 +1,7 @@
 {
  "metadata": {
   "name": "",
-  "signature": "sha256:c29db2cfb16713c6aff00b8e172afee7b767da8e4a73e2dfcdf17eac82ef6a75"
+  "signature": "sha256:642ca430aaa941e10a7b34f01e809da6dfc0253e1ea78fba60686bf65cc49ea1"
  },
  "nbformat": 3,
  "nbformat_minor": 0,
@@ -86,7 +86,7 @@
       "4. With aluminum wedge bonds, wirebond the SSA chip to the toothbrush board. This should require 6 wirebonds: one pair for each of IN, FB, and BIAS. See below for a completed example.\n",
       "5. _[optional]_ With gold wedge bonds, make thermal wirebonds from the toothbrush board to the SSA chip.\n",
       "\n",
-      "<img src=\"toothbrush-ssa_microscope.jpg\">"
+      "<img src=\"toothbrush-ssa_microscope.jpg\" height=800>"
      ]
     },
     {
@@ -300,24 +300,6 @@
      "metadata": {},
      "source": [
       "<hr size=5>"
-     ]
-    },
-    {
-     "cell_type": "heading",
-     "level": 2,
-     "metadata": {},
-     "source": [
-      "Extra Images"
-     ]
-    },
-    {
-     "cell_type": "markdown",
-     "metadata": {},
-     "source": [
-      "<img src=\"box.jpg\">\n",
-      "<img src=\"probe.jpg\">\n",
-      "<img src=\"probe2.jpg\">\n",
-      "<img src=\"toothbrush_backplane.jpg\">"
      ]
     }
    ],
