Updated toothbrush board assembly procedure.

--- a/PIPER SSA Test Plan.ipynb
+++ b/PIPER SSA Test Plan.ipynb
@@ -1,7 +1,7 @@
 {
  "metadata": {
   "name": "",
-  "signature": "sha256:642ca430aaa941e10a7b34f01e809da6dfc0253e1ea78fba60686bf65cc49ea1"
+  "signature": "sha256:7d85cf1fd3c77770d491265e1632885c2c99ae594821846f084363d5fcdb4966"
  },
  "nbformat": 3,
  "nbformat_minor": 0,
@@ -22,7 +22,7 @@
      "source": [
       "Justin Lazear\n",
       "\n",
-      "2014-06-17"
+      "2014-07-09"
      ]
     },
     {
@@ -69,7 +69,9 @@
      "source": [
       "The toothbrush boards are designed to position the series array chips far inside the 10:1 aspect ratio closed-end welded niobium shield. \n",
       "\n",
-      "<img src=\"toothbrush_board.png\">\n",
+      "<img src=\"tb_board_small.JPG\">\n",
+      "\n",
+      "The middle board shows a bare toothbrush board. The bottom board shows the niobium square being glued onto the board. The top board shows a completed toothbrush board (SA chip failed for that particular one, hence the label \"BAD\"). \n",
       "\n",
       "The series array chip is mounted near the end of the board with a square of niobium foil underneath."
      ]
@@ -78,15 +80,38 @@
      "cell_type": "markdown",
      "metadata": {},
      "source": [
-      "Toothbrush board assembly:\n",
+      "<h3>Toothbrush board assembly:</h3>\n",
       "\n",
-      "1. Bond using Hysol EA 9309.3 epoxy a 0.25\" x 0.25\" x 0.005\" square of niobium foil to the bond pad. Let cure for 1 hour at 50 deg C. \n",
-      "2. The SSA chips come coated with photoresist. Clean the photoresist by alternating between acetone and alcohol, ending with alcohol. \n",
-      "3. Bond using Hysol EA 9309.3 epoxy the SSA chip onto the niobium foil. Make sure the bond pads on the board correctly align with the bond pads on the SSA chip.\n",
-      "4. With aluminum wedge bonds, wirebond the SSA chip to the toothbrush board. This should require 6 wirebonds: one pair for each of IN, FB, and BIAS. See below for a completed example.\n",
-      "5. _[optional]_ With gold wedge bonds, make thermal wirebonds from the toothbrush board to the SSA chip.\n",
+      "1. Bond using Hysol EA 9309.3 epoxy a 0.25\" x 0.25\" x 0.005\" square of niobium foil to the SSA chip pad. \n",
+      "    1. Procedure must be done under an active fume hood. Wear gloves.\n",
+      "    2. Clean niobium foil square with a sequence of acetone, alcohol (ethyl), and de-ionized water. Let dry on a tech wipe.\n",
+      "    3. Apply kapton tape to a rigid spacer square and clean the surface of the kapton tape. \n",
+      "    4. Mix a batch of Hysol EA 9309.3 in accordance with its data sheet (<a href=\"https://tds.us.henkel.com/NA/UT/HNAUTTDS.nsf/web/9D207BBB9F2FFA3B8525792800663F9A/$File/Hysol_EA_9309_3NA-EN.pdf\">Hysol EA 9309.3</a>). Note that the mixture has a pot life of 35 minutes. \n",
+      "    5. Spread a thin layer of Hysol onto the SSA pad of the toothbrush board. \n",
+      "    6. Position the niobium foil square and apply pressure with a swab. Remove with a swab any excess Hysol. Hysol on bond pads must be cleaned with an alcohol swab.\n",
+      "    7. Hysol EA 9309.3 contains 5 mil glass beads, so it may be clamped without risk of compressing the epoxy joint smaller than the bond line width. Position a rigid spacer square with the clean kapton surface in contact with the niobium square. Apply pressure to the spacer. Remove excess Hysol. \n",
+      "    8. Apply a clamp to the board-foil-kapton-spacer stack. \n",
+      "    9. Let cure overnight at 50 deg C.\n",
+      "    \n",
+      "2. Prepare the SSA chip.\n",
+      "    1. Procedure must be done under an active fume hood. Wear gloves.\n",
+      "    2. SSA chips are not marked with a serial number. They will be designated according to their row and column in the package. All information and activities with a chip must be logged with the correct designation in the SSA chip tracking spreadsheet.\n",
+      "    3. Always remove chips in standard English reading order (left to right and top to bottom). Visually inspect and photograph the desired SSA chip. If there are any visible defects, make note of this in the log and skip to the next chip. Log the condition of the chip that will be used. Mark on the toothbrush board the designation of the SSA chip that will be placed on it.\n",
+      "    4. The SSA chips do not have a protective passivation coating. __USE ONLY ESD-SAFE PLASTIC-TIPPED TWEEZERS AND MANIPULATE THE CHIPS ONLY FROM THE SIDES__. Do not touch the top surface of the SSA chip with _any_ tools. The SSA chips are ESD-sensitive. __USE ALL STANDARD ESD PRECAUTIONS WHEN HANDLING SSA CHIPS__. \n",
+      "    5. Remove the the chip from the vacuum release tray using the VR tool.\n",
+      "    6. Clean the chip with a sequence of acetone, alcohol (ethyl), and de-ionized water. Let dry on a tech wipe. \n",
+      "    7. Mix a batch of Hysol EA 9309.3 in accordance with its data sheet (<a href=\"https://tds.us.henkel.com/NA/UT/HNAUTTDS.nsf/web/9D207BBB9F2FFA3B8525792800663F9A/$File/Hysol_EA_9309_3NA-EN.pdf\">Hysol EA 9309.3</a>). Note that the mixture has a pot life of 35 minutes. \n",
+      "    8. Spread a thin layer of Hysol onto the niobium foil square. \n",
+      "    9. Align the SSA chip (make sure the bond pads line up!), then press the SSA chip into position. __Do not touch the top surface of the chip__. \n",
+      "    10. Do not clamp. Let cure at 50 deg C overnight. \n",
+      "    \n",
+      "3. Wirebond the SSA chip to the toothbrush board with aluminum wedge bonds. There are 6 connections: one pair for each of IN, FB, and BIAS. Make two wirebonds per connection, for a total of 12 wirebonds per SSA chip. \n",
+      "4. _[optional]_ With gold wedge bonds, make thermal wirebonds from the toothbrush board to the SSA chip.\n",
+      "5. All assembled boards must stay in the nitrogen dry box unless in use. Do not stack boards. Do not place anything on top of an assembled board. Do not place assembled boards SSA-side down. Use the toothbrush board storage tray to store assembled boards. \n",
       "\n",
-      "<img src=\"toothbrush-ssa_microscope.jpg\" height=800>"
+      "<img src=\"toothbrush-ssa_microscope.jpg\" height=800>\n",
+      "\n",
+      "Figure: (Top) PIPER-style toothbrush board with SSA chip mounted. On the left of the chip, the bond pads are, from the top: THERMAL, FB, FB, THERMAL, OUT, OUT, THERMAL. On the right of the chip, the bond pads are, from the top: THERMAL, IN, IN, THERMAL. (Bottom) Old-style series array board with SSA chip mounted."
      ]
     },
     {
@@ -147,7 +172,7 @@
      "cell_type": "markdown",
      "metadata": {},
      "source": [
-      "The dip probe consists of a warm breakout box, a long stem, and a cold mounting bracket for the toothbrush module. The warm breakout box has BNC connectors for accessing all parts of all 4 channels of the SSA chips in the modules, and also houses the amplifier board that reads out the SSAs. The stem houses the SMA cables that extend from the warm amplifier board to the toothbrush backplane. The toothbrush backplane has a grid of 4 x 6 pins that connect to the sockets of the toothbrush module. The toothbrush module and niobium shield is secured by an aluminum mounting bracket. \n",
+      "The dip probe consists of a warm breakout box, a long stem, and a cold mounting bracket for the toothbrush module. The warm breakout box has BNC connectors for accessing all parts of all 4 channels of the SSA chips in the modules, and also houses the amplifier board that reads out the SSAs. The stem houses the SMA cables that extend from the warm amplifier board to the toothbrush backplane. The toothbrush backplane has a grid of 4 x 6 pins on a 0.1\" x 0.125\" grid that connect to the sockets of the toothbrush module. The toothbrush module and niobium shield is secured by an aluminum mounting bracket. \n",
       "\n",
       "<img src=\"full.png\">\n",
       "\n",
