Added more tests and flow control. Not yet tested yet, though!

--- a/PIPER SSA Test Plan.ipynb
+++ b/PIPER SSA Test Plan.ipynb
@@ -1,7 +1,7 @@
 {
  "metadata": {
   "name": "",
-  "signature": "sha256:7d85cf1fd3c77770d491265e1632885c2c99ae594821846f084363d5fcdb4966"
+  "signature": "sha256:19320e36b03c5bf0d4e1d571beb17122f2f6ea7fc320977226400c798727a617"
  },
  "nbformat": 3,
  "nbformat_minor": 0,
@@ -84,7 +84,7 @@
       "\n",
       "1. Bond using Hysol EA 9309.3 epoxy a 0.25\" x 0.25\" x 0.005\" square of niobium foil to the SSA chip pad. \n",
       "    1. Procedure must be done under an active fume hood. Wear gloves.\n",
-      "    2. Clean niobium foil square with a sequence of acetone, alcohol (ethyl), and de-ionized water. Let dry on a tech wipe.\n",
+      "    2. Clean niobium foil square with a sequence of acetone, alcohol (ethyl), and de-ionized water baths. For each bath, fill a small dish with the cleaning solution, then let the square soak for 3-5 minutes before moving the square to the next bath. Let dry on a tech wipe. \n",
       "    3. Apply kapton tape to a rigid spacer square and clean the surface of the kapton tape. \n",
       "    4. Mix a batch of Hysol EA 9309.3 in accordance with its data sheet (<a href=\"https://tds.us.henkel.com/NA/UT/HNAUTTDS.nsf/web/9D207BBB9F2FFA3B8525792800663F9A/$File/Hysol_EA_9309_3NA-EN.pdf\">Hysol EA 9309.3</a>). Note that the mixture has a pot life of 35 minutes. \n",
       "    5. Spread a thin layer of Hysol onto the SSA pad of the toothbrush board. \n",
@@ -99,7 +99,7 @@
       "    3. Always remove chips in standard English reading order (left to right and top to bottom). Visually inspect and photograph the desired SSA chip. If there are any visible defects, make note of this in the log and skip to the next chip. Log the condition of the chip that will be used. Mark on the toothbrush board the designation of the SSA chip that will be placed on it.\n",
       "    4. The SSA chips do not have a protective passivation coating. __USE ONLY ESD-SAFE PLASTIC-TIPPED TWEEZERS AND MANIPULATE THE CHIPS ONLY FROM THE SIDES__. Do not touch the top surface of the SSA chip with _any_ tools. The SSA chips are ESD-sensitive. __USE ALL STANDARD ESD PRECAUTIONS WHEN HANDLING SSA CHIPS__. \n",
       "    5. Remove the the chip from the vacuum release tray using the VR tool.\n",
-      "    6. Clean the chip with a sequence of acetone, alcohol (ethyl), and de-ionized water. Let dry on a tech wipe. \n",
+      "    6. Clean chip with a sequence of acetone, alcohol (ethyl), and de-ionized water baths. For each bath, fill a small dish with the cleaning solution, then let the chip soak for 3-5 minutes before moving the chip to the next bath. Let dry on a tech wipe. \n",
       "    7. Mix a batch of Hysol EA 9309.3 in accordance with its data sheet (<a href=\"https://tds.us.henkel.com/NA/UT/HNAUTTDS.nsf/web/9D207BBB9F2FFA3B8525792800663F9A/$File/Hysol_EA_9309_3NA-EN.pdf\">Hysol EA 9309.3</a>). Note that the mixture has a pot life of 35 minutes. \n",
       "    8. Spread a thin layer of Hysol onto the niobium foil square. \n",
       "    9. Align the SSA chip (make sure the bond pads line up!), then press the SSA chip into position. __Do not touch the top surface of the chip__. \n",
